# AiPoweredPredictiveMaintenance

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: create-container.yaml  main_fa-ymt6usioadrgq.yml  main_fnc-test-dng.yml  main_function-bcoicdjy3e7wq.yml  main_function-q3zap32h675nk.yml
AzureFunctions/fa_predictive_maintenance_csharp/: DataModel.cs  GetInferenceTelemetry.cs  PredictiveMaintenanceIotHub.cs  ai-powered-predictive-maintenance.csproj  local.settings.json
AzureFunctions/fa_predictive_maintenance_csharp/Properties/: launchSettings.json
AzureFunctions/fa_predictive_maintenance_python/: host.json  requirements.txt
AzureFunctions/fa_predictive_maintenance_python/AnomalyInference/: __init__.py  function.json
AzureFunctions/fa_predictive_maintenance_python/IotHubAcquisition/: __init__.py  function.json
AzureSphere/HardwareDefinitions/avnet_mt3620_sk/: predictive_maintenance.json
AzureSphere/HardwareDefinitions/avnet_mt3620_sk/inc/hw/: predictive_maintenance.h
AzureSphere/HardwareDefinitions/avnet_mt3620_sk_rev2/: predictive_maintenance.json
AzureSphere/HardwareDefinitions/avnet_mt3620_sk_rev2/inc/hw/: predictive_maintenance.h
AzureSphere/IntercoreContract/: intercore_contract.h
AzureSphere/IoT-Plug-and-Play/: PredictiveMaintenance.json
AzureSphere/classifyHL/: .clang-format  CMakeLists.txt  app_exit_codes.h  app_manifest.json  co2_sensor.c  co2_sensor.h  launch.vs.json  main.c  main.h
AzureSphere/classifyHL/Onboard/: azure_status.c
AzureSphere/image_packages/: AltairRT_movement_classify.imagepackage
AzureSphere/movementClassifyRT/: CMakeLists.txt  app_manifest.json  launch.vs.json  main.cpp
DotnetClient/: DotnetClient.csproj  Program.cs  Telemetry.cs  build-all.ps1  hvac.env
Notebooks/: .env  multivariate_sql_inference_plot.ipynb  univariant_sql_inference.ipynb
Notebooks/.ipynb_checkpoints/: multivariate_sql_inference_plot-checkpoint.ipynb  univariant_sql_inference-checkpoint.ipynb
Notebooks/DemoMultivariateTraining/: generator.py  getmodels.py  multivariate_train_from_timeseries_data.ipynb
Notebooks/DemoMultivariateTraining/.ipynb_checkpoints/: MVAD-SDK-Demo-checkpoint.ipynb  multivariate_inference_from_timeseries_data-checkpoint.ipynb  multivariate_plot-checkpoint.ipynb  multivariate_sql_inference_plot-checkpoint.ipynb
Notebooks/DemoMultivariateTraining/training/: sensors.csv
Notebooks/DemoUnivariate/: iot_central_data_backup.json  univariant_offline_timeseries_data.ipynb
Notebooks/DemoUnivariate/.ipynb_checkpoints/: AnomalyDetection-checkpoint.ipynb  univariant_offline_timeseries_data-checkpoint.ipynb  univariant_sql_inference-checkpoint.ipynb
infra/: anomal_detector.bicep  anomaly_detector.bicep  function.bicep  iot_hub.bicep  main.bicep  main.json  resources.bicep  sql.bicep
